# booking-service/docs/swagger.json
@@ -375,6 +375,15 @@
                         "name": "id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Cancellation details",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.CancellationInput"
+                        }
                     }
                 ],
                 "responses": {
@@ -821,12 +830,12 @@
                         "required": true
                     },
                     {
-                        "description": "Reason for cancellation",
+                        "description": "Cancellation details",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.CancelAppointmentInput"
+                            "$ref": "#/definitions/models.CancellationInput"
                         }
                     }
                 ],
@@ -1368,15 +1377,19 @@
                 }
             }
         },
-        "models.CancelAppointmentInput": {
+        "models.CancellationInput": {
             "type": "object",
             "required": [
-                "reason"
+                "reason_topic"
             ],
             "properties": {
-                "reason": {
+                "reason_message": {
                     "type": "string",
-                    "example": "Schedule conflict with my midterm exam"
+                    "example": "I have an unexpected lecture at this time."
+                },
+                "reason_topic": {
+                    "type": "string",
+                    "example": "Schedule Conflict"
                 }
             }
         },
